fix: drawer overflow on small resolutions

--- a/packages/react-components/src/components/drawer/drawer.module.css
+++ b/packages/react-components/src/components/drawer/drawer.module.css
@@ -22,10 +22,6 @@
     justify-content: flex-start;
   }
 
-  @media (--from-extra-small) {
-    overflow: auto;
-  }
-
   & > * {
     pointer-events: auto;
   }
